@@ -1,9 +1,9 @@
 .INCLUDES
-sys/param.h=.CHECK_INCLUDE(sys_param_h),REQUIRED=FALSE,INCLUDE=sys/param.h,.END
-dirent.h=test_dirent
-stdbool.h=test_stdbool
+sys/param.h=# checking sys/param.h,.CHECK_INCLUDE(header_sys_param_h),REQUIRED=FALSE,INCLUDE=sys/param.h,.END
+dirent.h=# checking dirent.h,.CHECK_INCLUDE(header_dirent_h),REQUIRED=FALSE,INCLUDE=dirent.h,.END
+stdbool.h=# checking stdbool.h,.CHECK_INCLUDE(header_stdbool_h),REQUIRED=FALSE,INCLUDE=stdbool.h,.END
 .END
 
 .FUNCTIONS
-strlcpy=test_for_strlcpy
+strlcpy=# checking strlcpy in string.h,.CHECK_INCLUDE(function_strlcpy),REQUIRED=FALSE,INCLUDE=string.h,FUNCTION=strlcpy,.END
 .END
